<resources>
    <string name="app_name">Instagram</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit profile</string>
    <string name="username">userName</string>
    <string name="search">Search</string>
    <string name="photos">Photos</string>
    <string name="videos"><![CDATA[Videos>]]></string>
    <string name="bio">bio</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="add_post">Add Post</string>
    <string name="add_reel">Add Reel</string>
    <string name="write_a_caption">Write a caption</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="reels">Reels</string>
</resources>