<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="50dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePhoto"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="72dp"
            android:text="@string/posts"
            app:layout_constraintStart_toEndOf="@+id/profilePhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/followText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="72dp"
            android:text="@string/followers"
            app:layout_constraintStart_toEndOf="@+id/postText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/followingtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="72dp"
            android:text="@string/following"
            app:layout_constraintStart_toEndOf="@+id/followText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usrname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/editProfile"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="80dp"
            android:backgroundTint="#34939393"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:cornerRadius="5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioText"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareprofile"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="80dp"
            android:backgroundTint="#34939393"
            android:text="Share profile"
            android:textColor="@color/black"
            android:textFontWeight="100"
            android:textSize="12sp"
            app:cornerRadius="5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/editProfile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/bioText"
            android:layout_width="182dp"
            android:layout_height="76dp"
            android:layout_marginTop="5dp"
            android:text="@string/bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usrname" />

        <HorizontalScrollView
            android:layout_width="417dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scrollbarStyle="insideInset"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/highlights1"
                    android:layout_width="60dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/instagram"
                    />
            </LinearLayout>
        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
       <com.google.android.material.tabs.TabItem
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>



